--- a/quickstart/app/hero-search.component.css
+++ b/quickstart/app/hero-search.component.css
@@ -1,2 +1,16 @@
-#TODO. Automatically created by MetaFactory. 
-#TODO. created at 2016-10-04 03:08:18.
+
+.search-result{
+  border-bottom: 1px solid gray;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  width:195px;
+  height: 20px;
+  padding: 5px;
+  background-color: white;
+  cursor: pointer;
+}
+#search-box{
+  width: 200px;
+  height: 20px;
+}
+    
