--- a/quickstart/app/hero-search.component.html
+++ b/quickstart/app/hero-search.component.html
@@ -4,14 +4,8 @@
   <div>
     <div *ngFor="let hero of heroes | async"
          (click)="gotoDetail(hero)" class="search-result" >
-      {{hero.name}}
+          {{hero.name}}, 
+          {{hero.superPower}}
     </div>
   </div>
 </div>
-
-
-<!-- 
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
